doc cleanup temporarily back to beta to test nuget deploy

--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -5,7 +5,7 @@
   All the examples have been migrated to the REPL page!
 
   Redirecting to <a href="https://getdatepicker.com/6/repl.html">https://getdatepicker.com/6/repl.html</a>
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <p>-->
 <!--      Version 6 removes the need for an input field, Bootstrap, jQuery and MomemntJs.-->
 <!--      Each example comes code section that can be toggled by clicking on <i class='fa-solid fa-code'-->
@@ -14,9 +14,9 @@
 <!--    <p>-->
 <!--      If you still need jQuery, check out the <a href='jquery.html'>jQuery examples</a>.-->
 <!--    </p>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='minimum-setup'>Minimum Setup <a class='anchor-link ' aria-label='Anchor' href='#minimum-setup'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -93,9 +93,9 @@
 <!--    <script type='text/javascript'>-->
 <!--      new tempusDominus.TempusDominus(document.getElementById('icon-only'));-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='simple-setup'>Simple Setup-->
 <!--      <a class='anchor-link ' aria-label='Anchor' href='#simple-setup'>-->
 <!--        <i class='fa-solid fa-anchor' aria-hidden='true'></i></a>-->
@@ -209,9 +209,9 @@
 <!--    <script type='text/javascript'>-->
 <!--      const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'));-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='side-by-side'>Side-by-Side-->
 <!--      <a class='anchor-link ' aria-label='Anchor' href='#side-by-side'>-->
 <!--        <i class='fa-solid fa-anchor' aria-hidden='true'></i></a>-->
@@ -328,9 +328,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='locales'>Using Locales <a class='anchor-link ' aria-label='Anchor' href='#locales'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -514,9 +514,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='time-only'>Time Only <a class='anchor-link ' aria-label='Anchor' href='#time-only'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -650,9 +650,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='date-only'>Date Only <a class='anchor-link ' aria-label='Anchor' href='#date-only'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -785,9 +785,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='input-only'>Input Only <a class='anchor-link ' aria-label='Anchor' href='#simple-setup'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -879,9 +879,9 @@
 <!--    <script type='text/javascript'>-->
 <!--      new tempusDominus.TempusDominus(document.getElementById('datetimepicker5'), {});-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='enabledDisabled-dates'>Enabled/Disabled Dates <a class='anchor-link ' aria-label='Anchor'-->
 <!--                                                             href='#simple-setup'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
@@ -1007,9 +1007,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='linked-pickers'>Linked pickers <a class='anchor-link ' aria-label='Anchor' href='#linked-pickers'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1217,9 +1217,9 @@
 <!--      // event listener can be unsubscribed to:-->
 <!--      // subscription.unsubscribe();-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='custom-icons'>Custom Icons <a class='anchor-link ' aria-label='Anchor' href='#custom-icons'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1363,9 +1363,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='view-mode'>View Mode <a class='anchor-link ' aria-label='Anchor' href='#view-mode'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1477,9 +1477,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='min-view-mode'>Minimum View <a class='anchor-link ' aria-label='Anchor' href='#min-view-mode'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1606,9 +1606,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='disabled-days-of-the-week'>Disabled Days of the Week <a class='anchor-link ' aria-label='Anchor'-->
 <!--                                                                    href='#disabled-days-of-the-week'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
@@ -1723,9 +1723,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='inline'>Inline <a class='anchor-link ' aria-label='Anchor' href='#inline'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1807,9 +1807,9 @@
 <!--        }-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='theme'>Theme <a class='anchor-link ' aria-label='Anchor' href='#theme'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -1938,9 +1938,9 @@
 <!--      setThemeDarkButton.addEventListener('click', () => updateTheme('dark'));-->
 <!--      setThemeAutoButton.addEventListener('click', () => updateTheme('auto'));-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='multidate'>Multiple Dates <a class='anchor-link ' aria-label='Anchor' href='#multidate'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -2055,9 +2055,9 @@
 <!--        multipleDates: true-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='setting-options'>Update options <a class='anchor-link ' aria-label='Anchor' href='#setting-options'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
 <!--      class='fa-solid fa-code' aria-hidden='true'></i></small></h3>-->
@@ -2196,9 +2196,9 @@
 <!--        changeOptionsButton.classList.toggle('btn-secondary');-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
-<!--  <section>-->
+<!--  <div class='row'>-->
 <!--    <h3 id='container-option'>Example with container parameter<a class='anchor-link ' aria-label='Anchor'-->
 <!--                                                                 href='#container-option'><i-->
 <!--      class='fa-solid fa-anchor' aria-hidden='true'></i></a> <small class='show-code' title='View Code'><i-->
@@ -2288,7 +2288,7 @@
 <!--        container: document.querySelector('div#parent-container')-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
 <!--  <section id='plugins-example'>-->
 <!--    <h3>Plugins-->
@@ -2449,7 +2449,7 @@
 <!--        document.body.appendChild(script);-->
 <!--      });-->
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 
 <!--  <section id='picker-functions'>-->
 <!--    <h3>Picker Functions-->
@@ -2599,7 +2599,7 @@
 <!--      });-->
 
 <!--    </script>-->
-<!--  </section>-->
+<!--  </div>-->
 <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">-->
 </page-body>
 
