--- a/src/docs/partials/examples/jquery.html
+++ b/src/docs/partials/examples/jquery.html
@@ -4,7 +4,7 @@
           crossorigin='anonymous' referrerpolicy='no-referrer'></script>
   <script src='/6/js/jQuery-provider.js'></script>
 
-  <section>
+  <div class='row'>
     <p>
       This page outlines using the picker with jQuery. The <code>jQuery-provider.js</code> file must be included after
       the
@@ -17,9 +17,9 @@
       The events are slightly different with jQuery. Using the native methods events return as <code>event.detail.[date|oldDate|etc]</code>.
       With jQuery, you will access those values <code>e.[date|oldDate|ect]</code>.
     </p>
-  </section>
+  </div>
 
-  <section>
+  <div class='row'>
     <h3 id='simple-setup'>Simple Setup <a class='anchor-link ' aria-label='Anchor' href='#simple-setup'><i
       class='fas fa-anchor' aria-hidden="true"></i></a> <small class='show-code' title='View Code'><i class='fas fa-code' aria-hidden="true"></i></small>
       <a aria-label='stackblitz' href='https://stackblitz.com/edit/tempus-dominus-v6-simple-jquery-setup?file=index.html'
@@ -127,7 +127,7 @@
     <script type='text/javascript'>
       $('#datetimepicker1').tempusDominus();
     </script>
-  </section>
+  </div>
 </page-body>
 
 <page-meta>
