--- a/src/docs/partials/index.html
+++ b/src/docs/partials/index.html
@@ -1,5 +1,5 @@
 <page-body>
-  <section>
+  <div class='row'>
     <p class="lead mb-4">
       Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides a wide array of options that allow developers to provide date and or time selections to users as simple pickers, date of birth selection, appointments and more.
     </p>
@@ -7,15 +7,15 @@
       If you're looking for installation instructions check out the <a href='installing.html'>download page</a>.
     </p>
     <p>
-      Once you get it installed there are plenty of <a href='repl.html'>examples</a> and a <a href='https://stackblitz.com/edit/tempus-dominus-v6-simple-setup'>stackblitz</a>.
+      Once you get it installed there are plenty of <a href='repl.html'>examples</a> and a <a href='https://stackblitz.com/@Eonasdan/collections/tempus-dominus'>stackblitz</a>.
     </p>
-    <h3>Get involved</h3>
+    <h2>Get involved</h2>
     <ul>
       <li>You can check out <a href='https://jonathanpeterson.com' rel="noopener" target='_blank'>my blog</a>.</li>
       <li>Join <a href="https://discord.gg/BHS9jw9YPf" rel="noopener nofollow" target='_blank'>the discord</a></li>
       <li>Check out the <a href="https://github.com/Eonasdan/tempus-dominus/discussions" rel="noopener" target='_blank'>discussions</a></li>
     </ul>
-  </section>
+  </div>
 </page-body>
 <page-meta>
   <title>Introduction</title>
