--- a/src/docs/partials/namespace/events.html
+++ b/src/docs/partials/namespace/events.html
@@ -1,5 +1,5 @@
 <page-body>
-  <section>
+  <div class='row'>
     <p>
       These events may provide additional details. For native javascript you can
       get this data via <code>e.details.*</code>. For jQuery the details are directly in the event, e.g.
@@ -74,7 +74,7 @@ interface HideEvent extends BaseEvent {
 }
     </code>
   </pre>
-  </section>
+  </div>
 </page-body>
 
 <page-meta>
