--- a/src/docs/partials/namespace/index.html
+++ b/src/docs/partials/namespace/index.html
@@ -1,13 +1,13 @@
 <page-body>
-  <section>
+  <div class='row'>
     <p>
       Tempus Dominus uses and exposes a Namespace class for consistency and easy reference.
     </p>
     <p>
       These values are provide via <code>tempusDominus.Namespace</code>
     </p>
-  </section>
-  <section>
+  </div>
+  <div class='row'>
     <h2>NAME</h2>
     <p>Returns <code>tempus-dominus</code>.</p>
     <h2>dataKey</h2>
@@ -21,7 +21,7 @@
 
     <h2>errorMessages</h2>
     <p>A class with the pickers errors and error messages. <a href='errors.html'>See the full css page for more details.</a></p>
-  </section>
+  </div>
 </page-body>
 
 <page-meta>
