--- a/src/docs/partials/namespace/unit.html
+++ b/src/docs/partials/namespace/unit.html
@@ -2,7 +2,7 @@
   <p>
     The picker uses the following enum to represent a breakdown of date/time.
   </p>
-  <section>
+  <div class='row'>
     <ul>
       <li>seconds</li>
       <li>minutes</li>
@@ -11,7 +11,7 @@
       <li>month</li>
       <li>year</li>
     </ul>
-  </section>
+  </div>
 
 </page-body>
 
