--- a/src/docs/partials/options/display.html
+++ b/src/docs/partials/options/display.html
@@ -4,8 +4,7 @@
     and change the default icons.
   </p>
   <pre id='defaults'>
-<code class='language-js'>
-new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
+<code class='language-js'>new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   {
     display: {
       icons: {
@@ -45,14 +44,13 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
       inline: false,
       theme: 'auto'
     }
-)
-</code>
+)</code>
           </pre>
 
   <div class='row'>
-    <h3 id='icons'>icons<a class='anchor-link' aria-label='Anchor' href='#icons'><i
+    <h2 id='icons'>icons<a class='anchor-link' aria-label='Anchor' href='#icons'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> string
     </p>
@@ -163,9 +161,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-  <h3 id='sideBySide'>sideBySide<a class='anchor-link' aria-label='Anchor'
+  <h2 id='sideBySide'>sideBySide<a class='anchor-link' aria-label='Anchor'
                                    href='#sideBySide'><i
-    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
   <p>
     <strong>Accepts:</strong> true|false <strong>Defaults:</strong> false<br />
     <img src='../images/side-by-side.png' class='img-fluid img-thumbnail d-block' alt='Side by Side View' />
@@ -174,9 +172,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-  <h3 id='calendarWeeks'>calendarWeeks<a class='anchor-link' aria-label='Anchor'
+  <h2 id='calendarWeeks'>calendarWeeks<a class='anchor-link' aria-label='Anchor'
                                          href='#calendarWeeks'><i
-    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
   <p>
     <strong>Accepts:</strong> true|false <strong>Defaults:</strong> false<br />
     <img src='../images/calendar-weeks.png' class='img-fluid img-thumbnail d-block' alt='Calendar View' />
@@ -185,8 +183,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-  <h3 id='viewMode'>viewMode<a class='anchor-link' aria-label='Anchor' href='#viewMode'><i
-    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+  <h2 id='viewMode'>viewMode<a class='anchor-link' aria-label='Anchor' href='#viewMode'><i
+    class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
   <p>
     <strong>Accepts:</strong> 'clock' | 'calendar' | 'months' | 'years' | 'decades'
     <strong>Defaults:</strong> calendar<br />
@@ -195,9 +193,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='toolbarPlacement'>toolbarPlacement<a class='anchor-link' aria-label='Anchor'
+    <h2 id='toolbarPlacement'>toolbarPlacement<a class='anchor-link' aria-label='Anchor'
                                                  href='#toolbarPlacement'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
 
     <p>
       <strong>Accepts:</strong> 'top' | 'bottom' <strong>Defaults:</strong> bottom<br />
@@ -210,8 +208,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='keepOpen'>keepOpen<a class='anchor-link' aria-label='Anchor' href='#keepOpen'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='keepOpen'>keepOpen<a class='anchor-link' aria-label='Anchor' href='#keepOpen'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts:</strong> true|false <strong>Defaults:</strong> false<br />
       Keep the picker window open even after a date selection. The picker can still be closed by the
@@ -221,9 +219,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='buttons'>buttons<a class='anchor-link' aria-label='Anchor' href='#buttons'><i
+    <h2 id='buttons'>buttons<a class='anchor-link' aria-label='Anchor' href='#buttons'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p><strong>Accepts: true|false</strong></p>
     <p>
       <img src='../images/buttons.png' class='img-fluid img-thumbnail d-block' alt='Buttons' />
@@ -262,9 +260,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='components'>components<a class='anchor-link' aria-label='Anchor'
+    <h2 id='components'>components<a class='anchor-link' aria-label='Anchor'
                                      href='#components'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p><strong>Accepts: true|false</strong></p>
 
     <p>
@@ -379,9 +377,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='inline'>inline<a class='anchor-link' aria-label='Anchor' href='#inline'><i
+    <h2 id='inline'>inline<a class='anchor-link' aria-label='Anchor' href='#inline'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> <strong>Defaults:boolean</strong> <br />
       Displays the picker in a inline div instead of a popup.
@@ -389,8 +387,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='theme'>theme<a class='anchor-link' aria-label='Anchor' href='#theme'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='theme'>theme<a class='anchor-link' aria-label='Anchor' href='#theme'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts:</strong> 'light' | 'dark' | 'auto' <strong>Defaults:</strong> 'auto'<br />
       Specifies which theme to use, light mode or dark mode. When set to auto, it will auto detect based on settings
@@ -451,7 +449,7 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
 </page-body>
 
 <page-meta>
-  <title>Display</title>
+  <title>Display Options</title>
   <post-date>08/11/2022</post-date>
   <update-date>08/11/2022</update-date>
   <excerpt>How to use the display options.
