--- a/src/docs/partials/options/index.html
+++ b/src/docs/partials/options/index.html
@@ -20,8 +20,7 @@
   </div>
 
   <pre id='defaults'>
-<code class='language-js'>
-new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
+<code class='language-js'>new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   {
     restrictions: {
       minDate: undefined,
@@ -135,14 +134,13 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
     meta: {},
     container: undefined
   }
-)
-</code>
+)</code>
 </pre>
 
   <div class='row'>
-    <h3 id='stepping'>stepping<a class='anchor-link' aria-label='Anchor' href='#stepping'><i
+    <h2 id='stepping'>stepping<a class='anchor-link' aria-label='Anchor' href='#stepping'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts</strong> number <strong>Defaults:</strong> 1<br />
       Controls how much the minutes are changed by. This also changes the minute selection grid to step by this
@@ -151,8 +149,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='useCurrent'>useCurrent<a class='anchor-link' aria-label='Anchor' href='#useCurrent'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='useCurrent'>useCurrent<a class='anchor-link' aria-label='Anchor' href='#useCurrent'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> true<br />
       Determines if the current date/time should be used as the default value when the picker is opened.
@@ -160,8 +158,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='defaultDate'>defaultDate<a class='anchor-link' aria-label='Anchor' href='#defaultDate'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='defaultDate'>defaultDate<a class='anchor-link' aria-label='Anchor' href='#defaultDate'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts:</strong> string | Date | DateTime <strong>Defaults:</strong> undefined<br />
       Sets the picker default date/time. Overrides <code>useCurrent</code>
@@ -169,8 +167,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='keepInvalid'>keepInvalid<a class='anchor-link' aria-label='Anchor' href='#keepInvalid'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='keepInvalid'>keepInvalid<a class='anchor-link' aria-label='Anchor' href='#keepInvalid'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       Allows for the user to select a date that is invalid according to the rules. For instance, if a user enters a date
@@ -179,8 +177,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='debug'>debug<a class='anchor-link' aria-label='Anchor' href='#debug'><i class='fa-solid fa-anchor'
-                                                                                    aria-hidden='true'></i></a></h3>
+    <h2 id='debug'>debug<a class='anchor-link' aria-label='Anchor' href='#debug'><i class='fa-solid fa-anchor'
+                                                                                    aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       Similar to <code>display.keepOpen</code>, if true the picker won't close during any event where that would
@@ -192,8 +190,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='allowInputToggle'>allowInputToggle<a class='anchor-link' aria-label='Anchor' href='#allowInputToggle'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='allowInputToggle'>allowInputToggle<a class='anchor-link' aria-label='Anchor' href='#allowInputToggle'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       If true, the picker will show on textbox focus.
@@ -201,9 +199,9 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='viewDate'>viewDate<a class='anchor-link' aria-label='Anchor' href='#viewDate'><i
+    <h2 id='viewDate'>viewDate<a class='anchor-link' aria-label='Anchor' href='#viewDate'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> string | Date | DateTime <strong>Defaults:</strong> now<br />
       Set the view date of the picker. Setting this will not change the selected date(s).
@@ -211,8 +209,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='multipleDates'>multipleDates<a class='anchor-link' aria-label='Anchor' href='#multipleDates'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+    <h2 id='multipleDates'>multipleDates<a class='anchor-link' aria-label='Anchor' href='#multipleDates'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       Allows multiple dates to be selected.
@@ -220,10 +218,10 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='multipleDatesSeparator'>multipleDatesSeparator<a class='anchor-link' aria-label='Anchor'
+    <h2 id='multipleDatesSeparator'>multipleDatesSeparator<a class='anchor-link' aria-label='Anchor'
                                                              href='#multipleDatesSeparator'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> string <strong>Defaults:</strong> <code>;</code><br />
       When <code>multipleDates</code> is enabled, this value wil be used to separate the selected dates. E.g. <code>08/29/2021,
@@ -232,10 +230,10 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='promptTimeOnDateChange'>promptTimeOnDateChange<a class='anchor-link' aria-label='Anchor'
+    <h2 id='promptTimeOnDateChange'>promptTimeOnDateChange<a class='anchor-link' aria-label='Anchor'
                                                              href='#promptTimeOnDateChange'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts</strong> true|false <strong>Defaults:</strong> false<br />
       If enabled and any of the time components are enabled, when a user selects a date the picker will automatically
@@ -244,11 +242,11 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='promptTimeOnDateChangeTransitionDelay'>promptTimeOnDateChangeTransitionDelay
+    <h2 id='promptTimeOnDateChangeTransitionDelay'>promptTimeOnDateChangeTransitionDelay
       <a class='anchor-link' aria-label='Anchor' href='#promptTimeOnDateChangeTransitionDelay'>
         <i class='fa-solid fa-anchor' aria-hidden='true'></i>
       </a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts</strong> number <strong>Defaults:</strong> 200<br />
       Used with <code>promptTimeOnDateChange</code>. The number of milliseconds before the picker will display the
@@ -258,11 +256,11 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='meta'>meta
+    <h2 id='meta'>meta
       <a class='anchor-link' aria-label='Anchor' href='#meta'>
         <i class='fa-solid fa-anchor' aria-hidden='true'></i>
       </a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts</strong> object <strong>Defaults:</strong> {}<br />
       This property is to provide developers a place to store extra information about the picker. You can use this to
@@ -272,11 +270,11 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='container'>container
+    <h2 id='container'>container
       <a class='anchor-link' aria-label='Anchor' href='#container'>
         <i class='fa-solid fa-anchor' aria-hidden='true'></i>
       </a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts</strong> <code>HTMLElement</code> <strong>Defaults:</strong> undefined<br />
       Change the target container to use for the widget instead of <code>body</code> (In case of application using
