--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -13,12 +13,14 @@
                     </li>
                     <li><a href='/6/change-log.html'
                            class='d-inline-flex align-items-center rounded' aria-current='page'>Change Log</a></li>
-                    <li><a href='/6/functions.html'
-                           class='d-inline-flex align-items-center rounded' aria-current='page'>Functions</a></li>
                     <li><a href='/6/datetime.html'
                            class='d-inline-flex align-items-center rounded' aria-current='page'>DateTime</a></li>
                     <li><a href='/6/locale.html'
-                           class='d-inline-flex align-items-center rounded' aria-current='page'>Locales</a></li>
+                           class='d-inline-flex align-items-center rounded' aria-current='page'>Locales</a></li><li>
+                    <a href='/6/migration.html' class='d-inline-flex align-items-center rounded'>
+                        Migration
+                    </a>
+                </li>
                 </ul>
             </li>
             <li class='mb-1'>
@@ -32,6 +34,18 @@
                     <li><a href='/6/options/restrictions.html' class='d-inline-flex align-items-center rounded'>Restrictions</a></li>
                     <li><a href='/6/options/display.html' class='d-inline-flex align-items-center rounded'>Display</a></li>
                     <li><a href='/6/options/localization.html' class='d-inline-flex align-items-center rounded'>Localization</a></li>
+                </ul>
+            </li>
+            <li class='mb-1'>
+                <strong>
+                    Functions
+                </strong>
+
+                <ul class='list-unstyled fw-normal pb-1 small'>
+                    <li><a href='/6/functions/' class='d-inline-flex align-items-center rounded'>Overview</a>
+                    </li>
+                    <li><a href='/6/functions/dates.html' class='d-inline-flex align-items-center rounded'>Dates</a></li>
+                    <li><a href='/6/functions/display.html' class='d-inline-flex align-items-center rounded'>Display</a></li>
                 </ul>
             </li>
             <li class='mb-1'>
@@ -66,12 +80,6 @@
                     <li><a href='/6/plugins/moment.html' class='d-inline-flex align-items-center rounded'>Momentjs</a>
                     </li>
                 </ul>
-            </li>
-            <li class='my-3 mx-4 border-top'></li>
-            <li>
-                <a href='/6/migration.html' class='d-inline-flex align-items-center rounded'>
-                    Migration
-                </a>
             </li>
         </ul>
     </nav>
