--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -50,7 +50,7 @@
 
 </head>
 
-<body>
+<body class="line-numbers">
 <div class='skippy visually-hidden-focusable overflow-hidden'>
   <div class='container-xl'>
     <a class='d-inline-flex p-2 m-1' href='#content'>Skip to main content</a>
@@ -181,7 +181,7 @@
                                             target='_blank' rel='license noopener'>MIT</a>, docs <a
             href='https://creativecommons.org/licenses/by/3.0/' target='_blank' rel='license noopener'>CC BY 3.0</a>.
           </li>
-          <li class='mb-2'>Currently v6.0.0-alpha1.</li>
+          <li class='mb-2'>Currently v6.0.0-beta10-alpha1.</li>
         </ul>
       </div>
       <div class='col-6 col-lg-2 offset-lg-1 mb-3'>
@@ -207,26 +207,34 @@
     </div>
   </div>
 </footer>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/solid.min.js'
+<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/solid.min.js'
         integrity='sha512-wabaor0DW08KSK5TQlRIyYOpDrAfJxl5J0FRzH0dNNhGJbeUpHaNj7up3Kr2Bwz/abLvVcJvDrJL+RLFcyGIkg=='
         crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/brands.min.js'
+<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/brands.min.js'
         integrity='sha512-oPuIMrT4JN6Cw359VQkuI0OPn1reFOKJm1YUOjXxgIzMmNMY7g4jenNcJdYcF3dt90WyNajzivr3vZFSzgqLow=='
         crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/fontawesome.min.js'
+<script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta10/js/fontawesome.min.js'
         integrity='sha512-PoFg70xtc+rAkD9xsjaZwIMkhkgbl1TkoaRrgucfsct7SVy9KvTj5LtECit+ZjQ3ts+7xWzgfHOGzdolfWEgrw=='
         crossorigin='anonymous' referrerpolicy='no-referrer'></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/prism.min.js" integrity="sha512-RDQSW3KoqJMiX0L/UBgwBmH1EmRYp8LBOiLaA8rBHIy+7OGP/7Gxg8vbt8wG4ZYd29P0Fnoq6+LOytCqx3cyoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/themes/prism-tomorrow.min.css" integrity="sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/autoloader/prism-autoloader.js" integrity="sha512-F+f/PpuIEHbIF3rrQgkRDU6EN9OmpfDWZiw/94StGTQeQPz9eeDZUWf2mj3/TfRXoiAEqTf/NUs2mGB2EBfDmw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/toolbar/prism-toolbar.min.js" integrity="sha512-st608h+ZqzliahyzEpETxzU0f7z7a9acN6AFvYmHvpFhmcFuKT8a22TT5TpKpjDa3pt3Wv7Z3SdQBCBdDPhyWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js" integrity="sha512-/kVH1uXuObC0iYgxxCKY41JdWOkKOxorFVmip+YVifKsJ4Au/87EisD1wty7vxN2kAhnWh6Yc8o/dSAXj6Oz7A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/line-numbers/prism-line-numbers.min.js" integrity="sha512-BttltKXFyWnGZQcRWj6osIg7lbizJchuAMotOkdLxHxwt/Hyo+cl47bZU0QADg+Qt5DJwni3SbYGXeGMB5cBcw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/line-numbers/prism-line-numbers.min.css" integrity="sha512-cbQXwDFK7lj2Fqfkuxbo5iD1dSbLlJGXGpfTDqbggqjHJeyzx88I3rfwjS38WJag/ihH7lzuGlGHpDBymLirZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/plugins/toolbar/prism-toolbar.min.css" integrity="sha512-Dqf5696xtofgH089BgZJo2lSWTvev4GFo+gA2o4GullFY65rzQVQLQVlzLvYwTo0Bb2Gpb6IqwxYWtoMonfdhQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    Prism.plugins.autoloader.languages_path = 'https://cdnjs.cloudflare.com/ajax/libs/prism/1.28.0/components/';
+  });
+</script>
 
-<script defer src='https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js'
-        integrity='sha512-YBk7HhgDZvBxmtOfUdvX0z8IH2d10Hp3aEygaMNhtF8fSOvBZ16D/1bXZTJV6ndk/L/DlXxYStP8jrF77v2MIg=='
-        crossorigin='anonymous'></script>
-<script defer src='https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-javascript.min.js'
-        integrity='sha512-I4ZWqUpk7wqHcm7Gkv7k4IdgrDUTlGm1a7xeqyduqZLWeoGOn2E9us4XNBEDGclpk+6d1CmqIHYwmoyyL59zeA=='
-        crossorigin='anonymous'></script>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism-tomorrow.min.css'
       integrity='sha512-vswe+cgvic/XBoF1OcM/TeJ2FW0OofqAVdCZiEYkd6dwGXthvkSFWOoGGJgS2CW70VK5dQM5Oh+7ne47s74VTg=='
       crossorigin='anonymous' />
+
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script defer>
   kofiWidgetOverlay.draw('eonasdan', {
