--- a/src/docs/partials/options/localization.html
+++ b/src/docs/partials/options/localization.html
@@ -15,18 +15,17 @@
         as
       </p>
       <pre>
-<code class='language-javascript'>
- new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'), {
+<code class='language-javascript'>new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'), {
    localization: ru
- }
-</code>
+ }</code>
      </pre>
     </div>
   </div>
+
   <hr />
+
   <pre id='defaults'>
-<code class='language-js'>
-new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
+<code class='language-js'>new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   {
     localization: {
       today: 'Go to today',
@@ -79,253 +78,252 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
       format: 'L'
     }
   }
-)
-</code>
+)</code>
   </pre>
 
   <div class='row'>
-    <h3 id='today'>today<a class='anchor-link' aria-label='Anchor'
+    <h2 id='today'>today<a class='anchor-link' aria-label='Anchor'
                            href='#today'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Defaults:</strong> Go to today<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='clear'>clear<a class='anchor-link' aria-label='Anchor'
+    <h2 id='clear'>clear<a class='anchor-link' aria-label='Anchor'
                            href='#clear'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Defaults:</strong> Clear selection<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='close'>close<a class='anchor-link' aria-label='Anchor'
+    <h2 id='close'>close<a class='anchor-link' aria-label='Anchor'
                            href='#close'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Defaults:</strong> Close the picker<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='selectMonth'>selectMonth<a class='anchor-link' aria-label='Anchor'
+    <h2 id='selectMonth'>selectMonth<a class='anchor-link' aria-label='Anchor'
                                        href='#selectMonth'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Select Month<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='previousMonth'>previousMonth<a class='anchor-link' aria-label='Anchor'
+    <h2 id='previousMonth'>previousMonth<a class='anchor-link' aria-label='Anchor'
                                            href='#previousMonth'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Previous Month<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='nextMonth'>nextMonth<a class='anchor-link' aria-label='Anchor'
+    <h2 id='nextMonth'>nextMonth<a class='anchor-link' aria-label='Anchor'
                                    href='#nextMonth'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Next Month<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='selectYear'>selectYear<a class='anchor-link' aria-label='Anchor'
+    <h2 id='selectYear'>selectYear<a class='anchor-link' aria-label='Anchor'
                                      href='#selectYear'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Select Year<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='previousYear'>previousYear<a class='anchor-link' aria-label='Anchor'
+    <h2 id='previousYear'>previousYear<a class='anchor-link' aria-label='Anchor'
                                          href='#previousYear'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Previous Year<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='nextYear'>nextYear<a class='anchor-link' aria-label='Anchor'
+    <h2 id='nextYear'>nextYear<a class='anchor-link' aria-label='Anchor'
                                  href='#nextYear'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Next Year<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='selectDecade'>selectDecade<a class='anchor-link' aria-label='Anchor'
+    <h2 id='selectDecade'>selectDecade<a class='anchor-link' aria-label='Anchor'
                                          href='#selectDecade'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Select Decade<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='previousDecade'>previousDecade<a class='anchor-link' aria-label='Anchor'
+    <h2 id='previousDecade'>previousDecade<a class='anchor-link' aria-label='Anchor'
                                              href='#previousDecade'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Previous Decade<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='nextDecade'>nextDecade<a class='anchor-link' aria-label='Anchor'
+    <h2 id='nextDecade'>nextDecade<a class='anchor-link' aria-label='Anchor'
                                      href='#nextDecade'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Next Decade<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='previousCentury'>previousCentury<a class='anchor-link' aria-label='Anchor'
+    <h2 id='previousCentury'>previousCentury<a class='anchor-link' aria-label='Anchor'
                                                href='#previousCentury'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Previous Century<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='nextCentury'>nextCentury<a class='anchor-link' aria-label='Anchor'
+    <h2 id='nextCentury'>nextCentury<a class='anchor-link' aria-label='Anchor'
                                        href='#nextCentury'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Next Century<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='pickHour'>pickHour<a class='anchor-link' aria-label='Anchor'
+    <h2 id='pickHour'>pickHour<a class='anchor-link' aria-label='Anchor'
                                  href='#pickHour'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Pick Hour<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='incrementHour'>incrementHour<a class='anchor-link' aria-label='Anchor'
+    <h2 id='incrementHour'>incrementHour<a class='anchor-link' aria-label='Anchor'
                                            href='#incrementHour'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Increment Hour<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='decrementHour'>decrementHour<a class='anchor-link' aria-label='Anchor'
+    <h2 id='decrementHour'>decrementHour<a class='anchor-link' aria-label='Anchor'
                                            href='#decrementHour'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Decrement Hour<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='pickMinute'>pickMinute<a class='anchor-link' aria-label='Anchor'
+    <h2 id='pickMinute'>pickMinute<a class='anchor-link' aria-label='Anchor'
                                      href='#pickMinute'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Pick Minute<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='incrementMinute'>incrementMinute<a class='anchor-link' aria-label='Anchor'
+    <h2 id='incrementMinute'>incrementMinute<a class='anchor-link' aria-label='Anchor'
                                                href='#incrementMinute'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Increment Minute<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='decrementMinute'>decrementMinute<a class='anchor-link' aria-label='Anchor'
+    <h2 id='decrementMinute'>decrementMinute<a class='anchor-link' aria-label='Anchor'
                                                href='#decrementMinute'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Decrement Minute<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='pickSecond'>pickSecond<a class='anchor-link' aria-label='Anchor'
+    <h2 id='pickSecond'>pickSecond<a class='anchor-link' aria-label='Anchor'
                                      href='#pickSecond'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Pick Second<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='incrementSecond'>incrementSecond<a class='anchor-link' aria-label='Anchor'
+    <h2 id='incrementSecond'>incrementSecond<a class='anchor-link' aria-label='Anchor'
                                                href='#incrementSecond'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Increment Second<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='decrementSecond'>decrementSecond<a class='anchor-link' aria-label='Anchor'
+    <h2 id='decrementSecond'>decrementSecond<a class='anchor-link' aria-label='Anchor'
                                                href='#decrementSecond'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Decrement Second<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='toggleMeridiem'>toggleMeridiem<a class='anchor-link' aria-label='Anchor'
+    <h2 id='toggleMeridiem'>toggleMeridiem<a class='anchor-link' aria-label='Anchor'
                                          href='#toggleMeridiem'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Toggle Period<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='selectTime'>selectTime<a class='anchor-link' aria-label='Anchor'
+    <h2 id='selectTime'>selectTime<a class='anchor-link' aria-label='Anchor'
                                      href='#selectTime'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Select Time<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='selectDate'>selectDate<a class='anchor-link' aria-label='Anchor'
+    <h2 id='selectDate'>selectDate<a class='anchor-link' aria-label='Anchor'
                                      href='#selectDate'><i
-      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h3>
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a></h2>
     <p>
       <strong>Defaults:</strong> Select Date<br />
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='dayViewHeaderFormat'>dayViewHeaderFormat<a class='anchor-link'
+    <h2 id='dayViewHeaderFormat'>dayViewHeaderFormat<a class='anchor-link'
                                                        aria-label='Anchor'
                                                        href='#dayViewHeaderFormat'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> DateTimeFormatOptions <strong>Defaults:</strong>
       <code>{ month: 'long', year: '2-digit' }</code><br />
@@ -334,10 +332,10 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='locale'>locale<a class='anchor-link' aria-label='Anchor'
+    <h2 id='locale'>locale<a class='anchor-link' aria-label='Anchor'
                              href='#locale'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Defaults:</strong> default<br />
       This should be a BCP 47 language tag or a value supported by Intl.
@@ -345,10 +343,10 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='startOfTheWeek'>startOfTheWeek<a class='anchor-link' aria-label='Anchor'
+    <h2 id='startOfTheWeek'>startOfTheWeek<a class='anchor-link' aria-label='Anchor'
                                              href='#startOfTheWeek'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       <strong>Accepts:</strong> 0-6 <strong>Defaults:</strong> 0<br />
       Changes the start of the week to the provided index. Intl/Date does not provide apis to get the
@@ -358,10 +356,10 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='dateFormats'>dateFormats<a class='anchor-link' aria-label='Anchor'
+    <h2 id='dateFormats'>dateFormats<a class='anchor-link' aria-label='Anchor'
                                        href='#dateFormats'>
       <i class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       These options describe shorthand format strings.
     </p>
@@ -420,20 +418,20 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   </div>
 
   <div class='row'>
-    <h3 id='ordinal'>ordinal<a class='anchor-link' aria-label='Anchor'
+    <h2 id='ordinal'>ordinal<a class='anchor-link' aria-label='Anchor'
                                href='#ordinal'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       Function to convert cardinal numbers to ordinal numbers, e.g. 3 -&gt; third.
     </p>
   </div>
 
   <div class='row'>
-    <h3 id='format'>format<a class='anchor-link' aria-label='Anchor'
+    <h2 id='format'>format<a class='anchor-link' aria-label='Anchor'
                              href='#format'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
-    </h3>
+    </h2>
     <p>
       Default tokenized format to use. This can be "L" or "dd/MM/yyyy".
     </p>
@@ -442,6 +440,8 @@ new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),
   <div id='subToc' class='d-none'>
     <nav id='TableOfContents'>
       <ul>
+        <li><a href='#content'>Overview</a></li>
+        <li><a href='#defaults'>Defaults</a></li>
         <li><a href="#today">Today</a></li>
         <li><a href="#clear">Clear</a></li>
         <li><a href="#close">Close</a></li>
